GNOME Bugzilla – Bug 627795
Some functions cannot be viewed in Assistant.
Last modified: 2010-08-28 08:10:23 UTC
Created attachment 168609 [details] [review] patch for the problem. I have a problem Assistant shows a blank page for some keywords, such as "g_str_hash" or "g_array_free". `devhelp -a g_str_hash` should reproduce this bug. Other affected functions include: "g_timer_destroy" "g_ptr_array_foreach" The current implementation of Assistant tries to extract part of the *.html file, by searching for "<pre class=\"programlisting" and "<div class=\"refsect". The problem is, there are no "<div class=\"refsect"s for functions documented at the bottom of the *.html files. Attached a small patch as a workaround. This patch tries to search for "<div class=\"footer" if there is no corresponding "<div class=\"refsect". This workaround works, but will result in 3 unmatched "</div>" tags to be printed in the generated html code. I think this can be removed by repeating g_strrstr 3 times, if really needed. I Hope this helps.
Thanks for your patch, I applied it to both 2.32 and master.