Fixed: some functions cannot be viewed in Assistant

Fixed a bug Assistant shows a blank page for some keywords,
such as "g_str_hash", which are documented at the bottom
of their *.html files.

https://bugzilla.gnome.org/show_bug.cgi?id=627795